--- a/index.html
+++ b/index.html
@@ -98,8 +98,7 @@
             <h3>1.</h3>
             <h4>Who we are</h4>
             <p>
-              You get a 2-week free trail to kick the Smaert tries. We want you
-              to.
+              We are passionate artisans curating exceptional pieces to reflect your unique home style.
             </p>
           </div>
           <div class="about__card">
@@ -175,14 +174,14 @@
             <!-- Slides -->
             <div class="swiper-slide">
               <div class="client__card">
-                <img src="assets/user-1.jpg" alt="user" />
+                <img src="assets/user1.png" alt="user" />
                 <div>
                   <p>
                     Furni.shop transformed my living space with their beautiful
                     and affordable furniture. The 5% cashback was a delightful
                     bonus!
                   </p>
-                  <h4>David Miller</h4>
+                  <h4>Shanaya Tomer</h4>
                   <h5>Real Estate Agent</h5>
                 </div>
               </div>
